themes/quest/style.css
/* ... */
@media (max-width: 767px) {
  .main-navigation {
    margin-bottom: 20px;
  }
  .main-navigation .navbar-collapse {
    padding: 0;
  }
  .main-navigation .nav {
    padding: 0 15px;
    border-top: none;
    line-height: 48px !important;
    display: block;
    text-align: left;
    margin: 0;
  }
  .main-navigation .nav > li > a {
    text-align: left;
  }
  .main-navigation .nav .dropdown-menu {
    background: transparent;
    -webkit-box-shadow: none;
    box-shadow: none;
  }
}
#menu-item-search .dropdown-menu {
  right: 1px !important;
  left: auto !important;
  border-top: 1px solid #e5e5e5 !important;
  padding: 12px;
  -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
  border: 1px solid #e5e5e5;
  background: #fff;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}
#menu-item-search .dropdown-menu li {
  border-bottom: none !important;
}
#menu-item-search .sub-arrow, #menu-item-search .caret {
  display: none !important;
}
#menu-item-search form {
  line-height: 1em;
}
#menu-item-search form .arrow-up:after {
  right: 11px;
  border: solid transparent;
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
  border-color: transparent;
  border-bottom-color: #fff;
  border-width: 10px;
  top: -20px;
}
#menu-item-search form .arrow-up:before {
  right: 10px;
  border: solid transparent;
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
  border-color: transparent;
  border-bottom-color: #e5e5e5;
  border-width: 11px;
  top: -23px;
}
#menu-item-search form input {
  -webkit-border-radius: 0;
          border-radius: 0;
  width: 250px;
  padding: 5px;
  -webkit-box-shadow: none;
  box-shadow: none;
  background: #f5f5f5;
  border: 1px solid #e0e0e0;
  margin-bottom: 0;
  line-height: 1.5em;
}
#menu-item-search form input:focus {
  -webkit-box-shadow: none;
  box-shadow: none;
}
#menu-item-search .fa-search {
  font-size: 16px;
  top: 0px;
}
#menu-item-search a {
  border-color: transparent;
}
#menu-item-search a:hover {
  border-color: transparent;
}
#menu-item-search a.active-icon {
  background: #27ae60;
  color: #fff;
}

.col-md-12.menu-container > .main-navigation > div {
  text-align: center;
}
.col-md-12.menu-container > .main-navigation > div > ul {
  display: inline-block;
  text-align: left;
  float: none !important;
}

@media (min-width: 980px) {
  .nav-collapse.collapse {
    height: auto !important;
    overflow: visible !important;
  }
}
/*---------------------------------------------------------
4. Header
-------------------------------------------------------- */
.site-title {
  margin: 10px 0;
}

.site-description {
  display: block;
  margin-bottom: 10px;
}

.main-header {
  z-index: 10000;
  background: #fff;
  border-bottom: 1px solid #e5e5e5;
  width: inherit;
}
.main-header.mobile .logo-container .logo {
  text-align: center;
}
.main-header.mobile .menu-container {
  margin-bottom: 40px;
}
.main-header.mobile .menu-container .logo {
  text-align: center;
}

.logo {
  margin: 0;
  text-align: left;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  position: relative;
}
.logo .retina {
  display: none;
}

.csstransitions .logo img {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
      -ms-transform: translateY(-50%);
          transform: translateY(-50%);
}

.csstransitions .logo-center .logo img, .csstransitions .header-version2 .site-branding .logo img {
  left: 50%;
  -webkit-transform: translateY(-50%) translateX(-50%);
      -ms-transform: translateY(-50%) translateX(-50%);
          transform: translateY(-50%) translateX(-50%);
}

@media (max-width: 991px) {
  .logo {
    text-align: center !important;
  }

  .csstransitions .logo img {
    left: 50%;
    -webkit-transform: translateY(-50%) translateX(-50%);
        -ms-transform: translateY(-50%) translateX(-50%);
            transform: translateY(-50%) translateX(-50%);
  }
}
@media (max-width: 480px) {
  .col-md-3 .logo {
    text-align: center;
    padding: 0;
  }
}
@media (min-width: 2500px) {
  .logo .normal {
    display: none;
  }
  .logo .retina {
    display: block;
  }
}
.col-md-12 .logo {
  text-align: center;
}

@media (max-width: 767px) {
  .site-branding .logo,
  .site-branding .site-title,
  .site-branding .site-description {
    text-align: center !important;
  }
}
@media (max-width: 480px) {
  .main-header {
    border-bottom: none;
  }
}
.secondary-header {
  border-top: 2px solid #27ae60;
  border-bottom: 1px solid #e5e5e5;
}
.secondary-header .callout {
  height: 30px;
}
.secondary-header .callout p {
  margin: 6px 5px;
  font-size: 12px;
}
.secondary-header .social-icon-container {
  margin: 2px 0;
  text-align: right;
}
.secondary-header .social-icon-container ul {
  padding: 0 5px 0 0;
}
.secondary-header .social-icon-container .social-icon {
  font-size: 14px;
  width: 24px;
  line-height: 24px;
}
.secondary-header .search-form {
  margin-top: 2.5px;
}
.secondary-header .search-form .text {
  text-align: right;
  width: 200px;
  float: right;
}
.secondary-header .search-form form.search input {
  padding: 2px 5px;
  font-size: 12px;
  line-height: 20px;
  height: 22px;
  border: none;
  -webkit-box-shadow: none;
  box-shadow: none;
}
.secondary-header .search-form .fa-search {
  top: -3px;
  right: -3px;
}
.secondary-header .row > .social-icon-container:first-child {
  text-align: left;
}
.secondary-header .row > .search-form:first-child .text {
  float: none;
}
.secondary-header .row > .callout:last-child {
  text-align: right;
}
/* ... */

